--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.3",
     "eslint": "^4.10.0",
+    "fetch-mock": "^5.13.1",
     "jest": "^21.2.1",
     "prop-types": "^15.6.0",
     "react-redux": "^5.0.6",
